<resources>
    <string name="app_name">Collage</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full name</string>
    <string name="create_account">Create account</string>
    <string name="full_name_error">Please tell us your name</string>
    <string name="email_error">This email is invalid</string>
    <string name="password_error">Password should contain at least 6 characters and no empty spaces</string>
    <string name="login_failure">Login failure</string>
    <string name="sign_up_failure">Account creation failed</string>
    <string name="type_your_friends_email">Type your friend\'s email</string>
    <string name="invite_friend">Invite</string>
    <string name="pending_invitations">Pending invitations:</string>
    <string name="accept_pending_invite">Accept</string>
    <string name="sign_out">Sign out</string>
    <string name="send_image">Send</string>
    <string name="camera_image_view_desc">Preview image</string>
    <string name="photo_image_view_desc">Friend\'s album photo</string>
    <string name="select_image">Select an image:</string>
    <string name="gallery_detail_image_view_desc">Photo from album</string>
    <string name="search_title">Search…</string>
    <string name="invitation_sent">Invitation sent</string>
    <string name="friend_not_found">Friend not found</string>
    <string name="connection_error_text">Please check your connection and retry.</string>
    <string name="retry_button_text">Retry</string>
    <string name="no_invitations_text">No invitations.</string>
    <string name="no_friends_text">You don\'t have friends yet :(</string>
    <string name="no_photos">No photos yet :(</string>
    <string name="select_friend_text">Select a friend to see your photos!</string>
    <string name="friends_screen_title">Friends</string>
    <string name="gallery_screen_title">Album</string>
    <string name="send_image_screen_title">Send to a friend</string>
    <string name="friend_search_screen_title">Add a friend</string>
    <string name="friends_profile_picture_desc">Your friend\'s profile picture</string>
    <string name="photo_text">Photo</string>
    <string name="empty_email_invite_error_text">Enter your friend\'s email first</string>
    <string name="invite_yourself_error_text">You can\'t invite yourself</string>
    <string name="already_friend_error_text">This user is already your friend</string>
    <string name="already_invited_error_text">You already invited that user</string>
    <string name="already_pending_error_text">This user is already on your pending list</string>
    <string name="change_password">Change password</string>
    <string name="retype_new_password">Retype new password</string>
    <string name="type_new_password">Type new password</string>
    <string name="type_old_password">Type old password</string>
    <string name="should_match_error">These fields should match</string>
    <string name="change_password_success">Success!</string>
    <string name="change_password_error">Error! Couldn\'t change password</string>
    <string name="empty_old_password_error">This field can\'t be empty</string>
    <string-array name="friends_long_click_options">
        <item>Remove friend</item>
    </string-array>
    <string-array name="photos_long_click_options">
        <item>Remove photo</item>
    </string-array>
</resources>
