<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/change_password_content_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_old_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_old_password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/type_old_password"
                android:inputType="textPassword"
                android:textCursorDrawable="@null" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_input_layout_old_password"
            android:layout_centerHorizontal="true"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_new_password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/type_new_password"
                android:inputType="textPassword"
                android:textCursorDrawable="@null" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_retype_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_input_layout_new_password"
            android:layout_centerHorizontal="true"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_retype_password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/retype_new_password"
                android:inputType="textPassword"
                android:textCursorDrawable="@null" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_change_password"
            style="@style/ButtonStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_input_layout_retype_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/change_password" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>